# code-review-agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  scan_and_review.py
.github/workflows/: assigned-prs.yml  code-review.yml  self-review.yml
ai/: PROMPT.md  __init__.py  ai.py  models.py  tools.py
config/: __init__.py  sources.py
services/: __init__.py  code_analyzer_service.py  review_tracker_service.py
