[project]
name = "code-review-agent"
version = "1.0.0"
description = "Autonomous Code Review Agent (LangChain + ASI:One) that auto-reviews GitHub PRs when added as a reviewer"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Code Review Agent" }]
dependencies = [
  "langchain>=1.2.10",
  "langchain-openai>=1.1.10",
  "langgraph>=1.0.10",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
code-review-agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "services", "config"]
